--- a/index.html
+++ b/index.html
@@ -311,6 +311,23 @@
             <!-- Link to Resume PDF -->
             <a href="files/malavika_menon_resume.pdf" target="_blank" class="btn btn-secondary">
                 <i class="fas fa-file-pdf mr-2"></i>Download Resume
+                <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Portfolio</title>
+</head>
+<body>
+    <h1>Welcome to my Portfolio</h1>
+    <p>Here is my resume embedded directly:</p>
+
+    <iframe src="pdfs/malavika_menon_resume.pdf" width="800" height="600" style="border: none;">
+        <p>Your browser does not support iframes. You can <a href="pdfs/malavika_menon_resume.pdf">download the resume here</a> instead.</p>
+    </iframe>
+
+    </body>
+</html>
             </a>
         </div>
     </section>
@@ -614,35 +631,3 @@
     </script>
 </body>
 </html>
-<!-- Certifications & Labs Section -->
-<section id="certifications" class="py-16 bg-white">
-    <h2 class="section-heading">Certifications & Labs</h2>
-    <div class="grid md:grid-cols-1 gap-8">
-        <div class="card">
-            <ul class="list-disc list-inside text-gray-700 text-lg">
-                <li>
-                    <!-- Link to SC-900 Certificate PDF -->
-                    <a href="certificates/sc900_certificate.pdf" target="_blank" class="text-blue-600 hover:underline">
-                        **SC-900 Microsoft Certified:** Security, Compliance & Identity Fundamentals (Aug 2024)
-                        <i class="fas fa-external-link-alt text-sm ml-1"></i>
-                    </a>
-                </li>
-                <li>
-                    <!-- Link to Cyber Wardens Certificate PDF -->
-                    <a href="certificates/cyber_wardens_certificate.pdf" target="_blank" class="text-blue-600 hover:underline">
-                        **Cyber Wardens Cyber Awareness Training** (Aug 2024)
-                        <i class="fas fa-external-link-alt text-sm ml-1"></i>
-                    </a>
-                </li>
-                <li>
-                    <!-- Link to Ethical Hacking Intern - CyberDosti Certificate PDF -->
-                    <a href="certificates/cyberdosti_internship_certificate.pdf" target="_blank" class="text-blue-600 hover:underline">
-                        **Ethical Hacking Intern - CyberDosti** (Dec 2023)
-                        <i class="fas fa-external-link-alt text-sm ml-1"></i>
-                    </a>
-                    <ul class="list-circle list-inside ml-6 mt-1">
-                        <li>TryHackMe: completed paths - OSINT Labs, Nmap scanning, vulnerability assessments, phishing email analysis, and malware analysis.</li>
-                        <li>Accessed the Metasploit Machine using multiple methods like Samba, FTP, Telnet, VNC, R Services, UnrealIRCd, Java-RMI, PostgreSQL, SSH, and Tomcat.</li>
-                    </ul>
-                </li>
-            </ul>
